--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"id": "shards-taskui",
+	"name": "Shards TaskUI",
+	"version": "0.0.1",
+	"minAppVersion": "0.0.1",
+	"description": "Shards TaskUI helps users visually manage tasks by extending the popular tasks plugin.",
+	"author": "Lennard Zündorf",
+	"authorUrl": "https://zuendorf.me",
+	"isDesktopOnly": true
 }
