--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,15 @@
     "inlineSources": true,
     "module": "ESNext",
     "target": "ES6",
+	  "jsx": "react-jsx",
     "allowJs": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
     "strictNullChecks": true,
+	  "allowSyntheticDefaultImports": true,
+	  "esModuleInterop": true,
     "lib": [
       "DOM",
       "ES5",
