--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"lint": "eslint ./src --fix && eslint main.ts --fix",
+		"format": "prettier ./src --write && prettier main.ts --write",
+		"prepare": "husky",
+		"lint-staged": "lint-staged"
 	},
 	"keywords": [],
 	"author": "",
@@ -19,12 +23,38 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"eslint-config-prettier": "^9.1.0",
+		"husky": "^9.1.6",
+		"lint-staged": "^15.2.10",
 		"obsidian": "latest",
+		"prettier": "3.3.3",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.js": [
+			"eslint --fix",
+			"prettier --write",
+			"git add"
+		],
+		"*.ts": [
+			"eslint --fix",
+			"prettier --write",
+			"git add"
+		],
+		"*.tsx": [
+			"eslint --fix",
+			"prettier --write",
+			"git add"
+		]
 	}
 }
