chore: adding logger, fixing lint-staged config

--- a/package.json
+++ b/package.json
@@ -43,18 +43,15 @@
 	"lint-staged": {
 		"*.js": [
 			"eslint --fix",
-			"prettier --write",
-			"git add"
+			"prettier --write"
 		],
 		"*.ts": [
 			"eslint --fix",
-			"prettier --write",
-			"git add"
+			"prettier --write"
 		],
 		"*.tsx": [
 			"eslint --fix",
-			"prettier --write",
-			"git add"
+			"prettier --write"
 		]
 	}
 }
