--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
 	"description": "Shards TaskUI helps users visually manage tasks by extending the popular tasks plugin.",
 	"main": "main.js",
 	"scripts": {
-		"build:css": "npx tailwindcss -i ./src/styles.css -o ./build/shards-taskui/styles.css --minify",
-		"dev:css": "npx tailwindcss -i ./src/styles.css -o ./styles.css --watch",
-		"build:js": "node esbuild.config.mjs --production",
-		"dev:js": "node esbuild.config.mjs",
 		"lint": "eslint ./src --fix",
 		"format": "prettier ./src --write",
 		"version": "node ./build/version-bump.mjs",
-		"dev": "npm run dev:css & npm run dev:js && npx rimraf main.css",
-		"build": "npm run lint && npm run format && node esbuild.config.mjs --production && npm run build:css && npx cpy manifest.json build/shards-taskui && rm build/shards-taskui/main.css",
+		"dev": "node esbuild.config.mjs",
+		"build": "npm run lint && npm run format && node esbuild.config.mjs --production && npx cpy manifest.json build/shards-taskui && rm build/shards-taskui/main.css && rm build/shards-taskui/styles.js",
 		"release": "npm run build && npm run version"
 	},
 	"keywords": [],
@@ -43,9 +39,14 @@
 		"@headlessui/react": "^2.1.10",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-tabs": "^1.1.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"esbuild-style-plugin": "^1.6.3",
 		"pino": "^9.5.0",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"husky": {
 		"hooks": {
