feat: shadcn color mapping, inital homescreen setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
+	  "baseUrl": ".",
 	  "paths": {
-		  "@/*": ["./src/"]
+		  "@/*": ["./src/ui*"]
 	  },
-    "baseUrl": ".",
     "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
