--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"version": "node ./build/version-bump.mjs",
 		"dev": "node esbuild.config.mjs",
 		"build": "npm run lint && npm run format && node esbuild.config.mjs --production && npx cpy manifest.json build/shards-taskui && rm build/shards-taskui/main.css && rm build/shards-taskui/styles.js",
-		"release": "npm run build && npm run version"
+		"release": "npm run build && npm run version",
+		"lint-staged": "lint-staged"
 	},
 	"keywords": [],
 	"author": "",
@@ -29,6 +30,7 @@
 		"husky": "^9.1.6",
 		"lint-staged": "^15.2.10",
 		"obsidian": "^1.7.2",
+		"obsidian-dataview": "^0.5.67",
 		"postcss": "^8.4.47",
 		"prettier": "3.3.3",
 		"tailwindcss": "^3.4.14",
@@ -37,14 +39,22 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^2.1.10",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"esbuild-style-plugin": "^1.6.3",
+		"jotai": "^2.10.1",
+		"jotai-devtools": "^0.10.1",
+		"lucide-react": "^0.453.0",
 		"pino": "^9.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-label": "^0.0.6",
+		"short-uuid": "^5.2.0",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7"
 	},
@@ -56,18 +66,15 @@
 	"lint-staged": {
 		"*.js": [
 			"eslint --fix",
-			"prettier --write",
-			"git add"
+			"prettier --write"
 		],
 		"*.ts": [
 			"eslint --fix",
-			"prettier --write",
-			"git add"
+			"prettier --write"
 		],
 		"*.tsx": [
 			"eslint --fix",
-			"prettier --write",
-			"git add"
+			"prettier --write"
 		]
 	}
 }
