--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"husky": "^9.1.6",
 		"lint-staged": "^15.2.10",
 		"obsidian": "^1.7.2",
-		"obsidian-dataview": "^0.5.67",
+		"obsidian-dataview": "^0.5.64",
 		"postcss": "^8.4.47",
 		"prettier": "3.3.3",
 		"tailwindcss": "^3.4.14",
@@ -49,6 +49,7 @@
 		"esbuild-style-plugin": "^1.6.3",
 		"jotai": "^2.10.1",
 		"jotai-devtools": "^0.10.1",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.453.0",
 		"pino": "^9.5.0",
 		"react": "^18.3.1",
