--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@radix-ui/react-tabs": "^1.1.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"esbuild-style-plugin": "^1.6.3",
 		"events": "^3.3.0",
 		"jotai": "^2.10.1",
