--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-label": "^0.0.6",
-		"short-uuid": "^5.2.0",
 		"tailwind-merge": "^2.5.4",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"ts-randomstring": "^1.0.8"
 	},
 	"husky": {
 		"hooks": {
