--- a/package.json
+++ b/package.json
@@ -38,8 +38,12 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/sortable": "^10.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@headlessui/react": "^2.1.10",
 		"@hookform/resolvers": "^5.0.1",
+		"@internationalized/date": "^3.8.0",
 		"@ophidian/core": "0.0.24",
 		"@radix-ui/react-collapsible": "^1.1.8",
 		"@radix-ui/react-dialog": "^1.1.11",
@@ -47,12 +51,15 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.11",
+		"@radix-ui/react-scroll-area": "^1.2.6",
 		"@radix-ui/react-select": "^2.2.2",
 		"@radix-ui/react-separator": "^1.1.4",
-		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-slot": "^1.2.0",
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@tanstack/react-form": "^1.7.0",
+		"@tanstack/react-table": "^8.21.3",
 		"@tanstack/zod-form-adapter": "^0.42.1",
+		"@types/uuid": "^10.0.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -67,13 +74,17 @@
 		"lucide-react": "^0.453.0",
 		"pino": "^9.5.0",
 		"react": "^18.3.1",
+		"react-aria-components": "^1.8.0",
 		"react-day-picker": "^9.4.3",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.56.1",
+		"react-icons": "^5.5.0",
 		"react-label": "^0.0.6",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7",
 		"ts-randomstring": "^1.0.8",
+		"use-mask-input": "^3.4.2",
+		"uuid": "^11.1.0",
 		"zod": "^3.24.3"
 	},
 	"husky": {
