--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
 	  "baseUrl": ".",
 	  "paths": {
-		  "@/*": ["./src/ui*"]
+		  "@/*": ["./src/ui*"],
+
 	  },
     "inlineSourceMap": true,
     "inlineSources": true,
@@ -26,5 +27,5 @@
   },
   "include": [
     "**/*.ts"
-, "vite.config.mjs"  ]
+, "vite.config.mjs", "src/data/types/taskVisuals.tsx"  ]
 }
