--- a/.github/workflows/pr-ci.yaml
+++ b/.github/workflows/pr-ci.yaml
@@ -1,35 +1,43 @@
-name: PR CI
+name: Lint, Format and Build
 
 on:
-  pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
-      - building
+    push:
+
+    workflow_dispatch:
+
+env:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node_version: [20.x, 22.x]
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+        name: Node ${{ matrix.node_version }} Build
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 'lts/*'
+            - name: Install pnpm
+              uses: pnpm/action-setup@v4
+              with:
+                  run_install: false
 
-      - name: Install dependencies
-        run: npm install
+            - name: Install Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: ${{ matrix.node_version }}
+                  cache: "pnpm"
 
-      - name: Run lint
-        run: npm run lint
+            - name: Dependency Install
+              run: pnpm install
 
-      - name: Run format
-        run: npm run format
+            - name: Run Prettier
+              run: pnpm run format
 
-      - name: Run build
-        run: npm run build
+            - name: Run Linter
+              run: pnpm run lint
+
+            - name: Build with Next.js
+              run: pnpm run build
