--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
+		"@types/node": "^16.18.114",
 		"@types/react": "^18.3.11",
-		"@types/react-dom": "^18.3.1",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
+		"@types/react-dom": "18.3.1",
+		"@typescript-eslint/eslint-plugin": "8.15.0",
+		"@typescript-eslint/parser": "8.15.0",
 		"autoprefixer": "^10.4.20",
 		"builtin-modules": "3.3.0",
 		"cpy-cli": "^5.0.0",
@@ -30,12 +30,13 @@
 		"husky": "^9.1.6",
 		"lint-staged": "^15.2.10",
 		"obsidian": "^1.7.2",
-		"obsidian-dataview": "^0.5.64",
+		"obsidian-dataview": "^0.5.68",
 		"postcss": "^8.4.47",
 		"prettier": "3.3.3",
 		"tailwindcss": "^3.4.14",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "4.8.4",
+		"eslint": "9.15.0"
 	},
 	"dependencies": {
 		"@dnd-kit/core": "^6.3.1",
@@ -67,7 +68,7 @@
 		"emblor": "^1.4.8",
 		"esbuild-style-plugin": "^1.6.3",
 		"events": "^3.3.0",
-		"jotai": "^2.10.1",
+		"jotai": "^2.12.3",
 		"jotai-devtools": "^0.10.1",
 		"jotai-effect": "^2.0.2",
 		"lodash": "^4.17.21",
