--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"cpy-cli": "^5.0.0",
 		"esbuild": "0.24.0",
 		"esbuild-plugin-tailwindcss": "^1.2.1",
+		"eslint": "9.14.0",
 		"eslint-config-prettier": "^9.1.0",
 		"husky": "^9.1.6",
 		"lint-staged": "^15.2.10",
@@ -35,8 +36,7 @@
 		"prettier": "3.3.3",
 		"tailwindcss": "^3.4.14",
 		"tslib": "2.4.0",
-		"typescript": "4.8.4",
-		"eslint": "9.15.0"
+		"typescript": "4.8.4"
 	},
 	"dependencies": {
 		"@dnd-kit/core": "^6.3.1",
