--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "taskui-plugin",
-	"name": "Shards ToDo",
+	"id": "shards-taskui-plugin",
+	"name": "Shards TaskUI",
 	"version": "0.0.1",
 	"minAppVersion": "0.0.1",
-	"description": "Shards ToDo enables comprehensive visual task management inside your vault, powered by the tasks and dataview plugins for Obsidian.",
+	"description": "Shards - TaskUI enables comprehensive visual task management inside your vault, powered by the tasks and dataview plugins for Obsidian.",
 	"author": "Lennard Zündorf",
 	"authorUrl": "https://zuendorf.me",
 	"isDesktopOnly": true
