--- a/components.json
+++ b/components.json
@@ -11,11 +11,11 @@
 		"prefix": ""
 	},
 	"aliases": {
-		"components": "@//components",
-		"utils": "@//utils",
-		"ui": "@//base",
-		"lib": "@//lib",
-		"hooks": "@//hooks"
+		"components": "@/ui/components",
+		"utils": "@/ui/utils",
+		"ui": "@/ui/base",
+		"lib": "@/ui/lib",
+		"hooks": "@/ui/hooks"
 	},
 	"iconLibrary": "lucide"
 }
