--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
 	  "baseUrl": ".",
 	  "paths": {
-		  "@/*": ["./src/ui*"],
-
+		  "@/*": ["./src/*"]
 	  },
     "inlineSourceMap": true,
     "inlineSources": true,
