--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
 	"description": "Shards TaskUI helps users visually manage tasks by extending the popular tasks plugin.",
 	"main": "main.js",
 	"scripts": {
-		"lint": "eslint ./src --fix",
-		"format": "prettier ./src --write",
+		"check": "biome check --write ./src",
 		"version": "node ./build/version-bump.mjs",
 		"dev": "vite build --watch --mode development",
-		"build": "npm run format && vite build --mode production",
+		"build": "npm run check && vite build --mode production",
 		"build-release": "npm run build && npm run version",
 		"lint-staged": "lint-staged"
 	},
@@ -16,22 +15,18 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@biomejs/biome": "2.3.8",
 		"@types/node": "^16.18.114",
 		"@types/react": "^18.3.11",
 		"@types/react-dom": "18.3.1",
-		"@typescript-eslint/eslint-plugin": "8.15.0",
-		"@typescript-eslint/parser": "8.15.0",
 		"@vitejs/plugin-react": "^5.1.2",
 		"autoprefixer": "^10.4.20",
 		"builtin-modules": "3.3.0",
-		"eslint": "9.14.0",
-		"eslint-config-prettier": "^9.1.0",
 		"husky": "^9.1.6",
 		"lint-staged": "^15.2.10",
 		"obsidian": "^1.7.2",
 		"obsidian-dataview": "^0.5.68",
 		"postcss": "^8.4.47",
-		"prettier": "3.3.3",
 		"tailwindcss": "^3.4.14",
 		"tslib": "2.4.0",
 		"typescript": "4.8.4",
@@ -93,17 +88,8 @@
 		}
 	},
 	"lint-staged": {
-		"*.js": [
-			"eslint --fix",
-			"prettier --write"
-		],
-		"*.ts": [
-			"eslint --fix",
-			"prettier --write"
-		],
-		"*.tsx": [
-			"eslint --fix",
-			"prettier --write"
+		"*.{js,ts,tsx,json}": [
+			"biome check --write --no-errors-on-unmatched"
 		]
 	},
 	"packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
