--- a/.github/workflows/pr-ci.yaml
+++ b/.github/workflows/pr-ci.yaml
@@ -5,14 +5,12 @@ on:
 
     workflow_dispatch:
 
-env:
-
 jobs:
     build:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node_version: [20.x, 22.x]
+                node_version: [20.x, 22.x, 24.x]
 
         name: Node ${{ matrix.node_version }} Build
         steps:
@@ -34,10 +32,7 @@ jobs:
               run: pnpm install
 
             - name: Run Prettier
-              run: pnpm run format
+              run: pnpm run check
 
-            - name: Run Linter
-              run: pnpm run lint
-
-            - name: Build with Next.js
+            - name: Build with Vite
               run: pnpm run build
