chore: update lint-staged configuration to include CSS files and clean up pre-commit and pre-push hooks

--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
 		"zod": "^3.24.3"
 	},
 	"lint-staged": {
-		"*.{js,ts,tsx,json}": [
+		"*.{js,ts,tsx,json,css}": [
 			"biome check --write --no-errors-on-unmatched"
 		]
 	},
