--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "shards-taskui-plugin",
 	"name": "Shards TaskUI",
-	"version": "0.0.1",
+	"version": "0.2",
 	"minAppVersion": "0.0.1",
-	"description": "Shards - TaskUI enables comprehensive visual task management inside your vault, powered by the tasks and dataview plugins for Obsidian.",
+	"description": "Shards - TaskUI enables comprehensive visual task management inside your vault, powered by dataview and compatible with the tasks plugin.",
 	"author": "Lennard Zündorf",
-	"authorUrl": "https://zuendorf.me",
+	"authorUrl": "https://shards.ignitr.dev",
 	"isDesktopOnly": true
 }
