--- a/.github/workflows/pr-ci.yaml
+++ b/.github/workflows/pr-ci.yaml
@@ -31,7 +31,7 @@ jobs:
             - name: Dependency Install
               run: pnpm install
 
-            - name: Run Prettier
+            - name: Run Biome Check
               run: pnpm run check
 
             - name: Build with Vite
