--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,7 @@ data.json
 /build/taskui-plugin-dev/styles.js
 
 /build/taskui-plugin/
-/dev-vault/.obsidian/plugins/taskui-plugin/
-/dev-vault/.obsidian/plugins/obsidian-style-settings/
+/dev-vault/.obsidian/plugins/
 
 # cursor
 .cursor/mcp.json
