--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "shards-taskui-plugin",
-	"name": "Shards TaskUI",
+	"id": "shards-plugin",
+	"name": "Shards",
 	"version": "0.2",
 	"minAppVersion": "0.0.1",
-	"description": "Shards - TaskUI enables comprehensive visual task management inside your vault, powered by dataview and compatible with the tasks plugin.",
+	"description": "Shards enables comprehensive visual task management inside your vault, powered by dataview and compatible with the tasks plugin.",
 	"author": "Lennard Zündorf",
 	"authorUrl": "https://shards.ignitr.dev",
 	"isDesktopOnly": true
