--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
 		"esModuleInterop": true,
 		"lib": ["DOM", "ES5", "ES6", "ES7"]
 	},
-	"include": ["**/*.ts", "vite.config.mjs", "src/data/types/taskVisuals.tsx"]
+	"include": ["**/*.ts", "**/*.tsx", "vite.config.mjs"]
 }
