--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,22 @@
 {
-  "compilerOptions": {
-	  "baseUrl": ".",
-	  "paths": {
-		  "@/*": ["./src/*"]
-	  },
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "module": "ESNext",
-    "target": "ES6",
-	  "jsx": "react-jsx",
-    "allowJs": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "isolatedModules": true,
-    "strictNullChecks": true,
-	  "allowSyntheticDefaultImports": true,
-	  "esModuleInterop": true,
-    "lib": [
-      "DOM",
-      "ES5",
-      "ES6",
-      "ES7"
-    ]
-  },
-  "include": [
-    "**/*.ts"
-, "vite.config.mjs", "src/data/types/taskVisuals.tsx"  ]
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/*"]
+		},
+		"strict": true,
+		"inlineSourceMap": true,
+		"inlineSources": true,
+		"module": "ESNext",
+		"target": "ES6",
+		"jsx": "react-jsx",
+		"allowJs": true,
+		"moduleResolution": "node",
+		"importHelpers": true,
+		"isolatedModules": true,
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"lib": ["DOM", "ES5", "ES6", "ES7"]
+	},
+	"include": ["**/*.ts", "**/*.tsx", "vite.config.mjs"]
 }
